--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,29 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
-    steps:
 
+    # Service containers to run with `container-job`
+    services:
+      # Label used to access the service container
+      postgres:
+        # Docker Hub image
+        image: postgres:16
+        # Provide the password for postgres
+        env:
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: secret
+          POSTGRES_DB: bank_app
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          # Maps tcp port 5432 on service container to the host
+          - 5432:5432
+
+    steps:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
@@ -24,6 +45,9 @@ jobs:
 
     - name: Check out code into Go module directory
       uses: actions/checkout@v3
-
+    
+    - name: Run migrations
+      run: make migrateup
+      
     - name: Test
       run: make test
