--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,8 +46,14 @@ jobs:
     - name: Check out code into Go module directory
       uses: actions/checkout@v3
     
+    - name: Install golang-migrate
+      run: | 
+        curl -L https://github.com/golang-migrate/migrate/releases/download/v4.17.0/migrate.linux-amd64.tar.gz | tar xvz
+        sudo mv migrate /usr/bin/
+        which migrate
+
     - name: Run migrations
       run: make migrateup
-      
+
     - name: Test
       run: make test
