--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -11,8 +11,8 @@ sql:
       out: "db/sqlc"
       emit_json_tags: true
       emit_empty_slices: true
+      emit_interface: true
       #emit_prepared_queries: false
-      #emit_interface: false
       #emit_exact_table_names: false
       
       
